--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0",
     "json-server": "^1.0.0-alpha.16",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-nuke-dist": "^1.0.1",
+    "posthtml-include": "^1.7.4"
   },
   "dependencies": {
     "modern-normalize": "^2.0.0"
